--- a/index.html
+++ b/index.html
@@ -18,3 +18,8 @@
     <title>JUST DO IT</title>
 
 </head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+</html>
